--- a/src/app/Components/booking/booking.component.html
+++ b/src/app/Components/booking/booking.component.html
@@ -184,7 +184,7 @@
                             <td>{{item.bookingDate |date:'yyyy-MM-dd'}}</td>
                             <td>{{item.roomTitle}}</td>
                             <td>{{item.partyName}}</td>
-                            <td>{{item.rentPerDay |number}}</td>
+                            <td>{{item.rentPerDay |number:'1.0-0'}}</td>
                             <td>{{item.dateOfArrival | date:'yyyy-MM-dd'}} </td>
                             <td>{{item.dateOfDeparture | date:'yyyy-MM-dd'}} </td>
                             <td>{{item.confirmationDate | date:'yyyy-MM-dd'}} </td>
@@ -399,11 +399,11 @@
                     <tbody>
                         <tr>
                             <td>{{lblRoomTitle}}</td>
-                            <td>{{lblRentPerDay |number}}</td>
+                            <td>{{lblRentPerDay |number:'1.0-0'}}</td>
                             <td>{{lblTotalDays}}</td>
-                            <td>{{lblTotalDays * lblRentPerDay |number}}</td>
-                            <td>{{lblPaidAmount |number}}</td>
-                            <td>{{(lblTotalDays * lblRentPerDay) -lblPaidAmount |number}}</td>
+                            <td>{{lblTotalDays * lblRentPerDay |number:'1.0-0'}}</td>
+                            <td>{{lblPaidAmount |number:'1.0-0'}}</td>
+                            <td>{{(lblTotalDays * lblRentPerDay) -lblPaidAmount |number:'1.0-0'}}</td>
                         </tr>
                     </tbody>
                    
