--- a/src/app/Components/dash-board/dash-board.component.html
+++ b/src/app/Components/dash-board/dash-board.component.html
@@ -113,7 +113,7 @@
     
     <div class="col-md-4">
        
-            <div class="mat-elevation-z2" [chart]="prvious_Income_Detail_Chart"></div>
+            <div class="mat-elevation-z2" [chart]="Expense_Chart"></div>
           
 
     </div>
