--- a/src/app/Reports/booking-rpt-date-wise/booking-rpt-date-wise.component.html
+++ b/src/app/Reports/booking-rpt-date-wise/booking-rpt-date-wise.component.html
@@ -95,8 +95,8 @@
                             <td>{{item.dateOfDeparture | date:'yyyy-MM-dd'}} </td>
                            
                             <td>{{item.bookingStatus}} </td>
-                            <td>{{item.rentPerDay |number}}</td>
-                            <td>{{item.advancePaid |number}}</td>
+                            <td>{{item.rentPerDay |number:'1.0-0'}}</td>
+                            <td>{{item.advancePaid |number:'1.0-0'}}</td>
 
                            
                         </tr>
