--- a/src/app/Components/hotel-dashboard/hotel-dashboard.component.html
+++ b/src/app/Components/hotel-dashboard/hotel-dashboard.component.html
@@ -14,8 +14,8 @@
 
                     </span>
                     <span class="cardText">
-                        <p    class="digitalFont">{{totalBookings|number}}</p>
-                        <h6 class=" fw-bold" style="color: rgb(84, 84, 84);"> TOTAL BOOKINGS</h6>
+                        <p>{{totalBookings|number}}</p>
+                        <h6> TOTAL BOOKINGS</h6>
                     </span>
                 </div>
 
@@ -35,9 +35,8 @@
 
                     </span>
                     <span class="cardText">
-                        <P class="digitalFont">
-                            {{pendingBookings |number}}</P>
-                        <h6 class=" fw-bold" style="color: rgb(115, 114, 115);"> PENDING BOOKINGS</h6>
+                        <P>{{pendingBookings |number}}</P>
+                        <h6> PENDING BOOKINGS</h6>
                     </span>
                 </div>
 
@@ -59,8 +58,8 @@
 
                     </span>
                     <span class="cardText">
-                        <p  class="digitalFont">{{totalCheckIn|number}}</p>
-                        <h6 class=" fw-bold" style="color: rgb(115,115,115);"> TOTAL CHECK IN</h6>
+                        <p >{{totalCheckIn|number}}</p>
+                        <h6 > TOTAL CHECK IN</h6>
                     </span>
                 </div>
 
@@ -83,8 +82,8 @@
 
                     </span>
                     <span class="cardText">
-                        <h6 class="digitalFont">{{totalCheckOut|number}}</h6>
-                        <h5 class=" fw-bold" style="color: rgb(115, 115, 115);"> TOTAL CHECK OUT</h5>
+                        <p>{{totalCheckOut|number}}</p>
+                        <h6> TOTAL CHECK OUT</h6>
                     </span>
                 </div>
 
@@ -133,9 +132,12 @@
                             <h5 class="mt-2 me-1">Out Of Order</h5>
                         </span>
                        </div>
+                       <div class="pt-1 mt-1 ">
+                        <p>Total: ( <span class="digitalFont">{{roomsList.length}}</span> )</p>
+                       </div>
 
-                       <div class="pt-3 w-25 text-end">
-                        
+                       <div class="pt-1 mt-1  w-25 text-end">
+                       
                             <!-- <input matInput [(ngModel)]="searchRoom" /> -->
                             <select [(ngModel)]="searchRoom" (change)="onStatusSelected()">
                                 <option *ngFor="let item of  statusList" [value]="item.id">
@@ -150,11 +152,11 @@
                    <table>
                        <tbody>
    
-                           <tr style="display: inline-flex;" *ngFor="let item of roomsList ">
+                           <tr style="display: inline-flex; " class="cursorPointer" *ngFor="let item of roomsList ">
 
                                <mat-card class=" btblbtn " (click)="changeRoomStatus(item)"  [ngClass]="roomStautsTable(item)"  >
                                <span class="text-end p-1"  >
-                                   <mat-icon class="text-center justify-content-center" style="width: 25px; height: 25px; font-size: 18px;; border-radius: 50%;">{{roomStatusTableIcon}}</mat-icon>
+                                   <mat-icon class="text-center justify-content-center" style="width: 25px; height: 25px; font-size: 18px;background-color: white; border-radius: 50%;">{{roomStatusTableIcon}}</mat-icon>
                                </span>
                               <span>
                                {{item.roomTitle}}
