--- a/src/app/Reports/budget-report/budget-report.component.html
+++ b/src/app/Reports/budget-report/budget-report.component.html
@@ -59,15 +59,15 @@
                     <tr *ngFor=" let item of reportData;index as index">
                         <td>{{index +1}}</td>
                         <td class="fw-bold">{{item.coaTitle}}</td>
-                        <td class="text-end">{{item.budgetAmount |number}}</td>
-                        <td class="text-end">{{item.consumedAmount |number}}</td>
-                        <td class="text-end">{{item.budgetAmount - item.consumedAmount |number}}</td>
+                        <td class="text-end">{{item.budgetAmount |number:'1.0-0'}}</td>
+                        <td class="text-end">{{item.consumedAmount |number:'1.0-0'}}</td>
+                        <td class="text-end">{{item.budgetAmount - item.consumedAmount |number:'1.0-0'}}</td>
                     </tr>
                     <tr *ngIf="TotalAmount != 0">
                         <th colspan="2" class="text-center">Total</th>
-                        <th class="text-end">{{TotalAmount |number}}</th>
-                        <th class="text-end">{{totalConsumedAmount |number}}</th>
-                        <th class="text-end"> {{ TotalAmount - totalConsumedAmount |number}}</th>
+                        <th class="text-end">{{TotalAmount |number:'1.0-0'}}</th>
+                        <th class="text-end">{{totalConsumedAmount |number:'1.0-0'}}</th>
+                        <th class="text-end"> {{ TotalAmount - totalConsumedAmount |number:'1.0-0'}}</th>
                     </tr>
                 </tbody>
             </table>
