--- a/src/app/Reports/cashbook/cashbook.component.html
+++ b/src/app/Reports/cashbook/cashbook.component.html
@@ -70,17 +70,17 @@
                 <tr *ngFor="let item of tableData;index as index">
                     <td>{{index+1}}</td>
                     <td (click)="getInvoiceDetail(item.invoiceNo)" class="cursorPointer text-primary" 
-                    data-bs-toggle="modal" data-bs-target="#invoiceDetailModel" ><span class="border-bottom">{{item.invoiceNo}}</span></td>
+                    data-bs-toggle="modal" data-bs-target="#invoiceDetailModel" ><span class="border-bottom">{{item.invoiceNo |number}}</span></td>
                     <td>{{item.invoiceDate |date:'yyyy-MM-dd'}}</td>
                     <td>{{item.coaTitle}}</td>
                     <td>{{item.invoiceRemarks}}</td>
-                    <td>{{item.debit |number}}</td>
-                    <td>{{item.credit |number}}</td>
+                    <td>{{item.debit |number:'1.0-0'}}</td>
+                    <td>{{item.credit |number:'1.0-0'}}</td>
                 </tr>
                 <tr>
                     <th colspan="5" class="text-center">Total</th>
-                    <th>{{DebitTotal |number}}</th>
-                    <th>{{creditTotal |number}}</th>
+                    <th>{{DebitTotal |number:'1.0-0'}}</th>
+                    <th>{{creditTotal |number:'1.0-0'}}</th>
                 </tr>
             </tbody>
         </table>
@@ -98,8 +98,8 @@
             <tr *ngFor="let item of cashSummary;index as index" class="border-bottom">
                 <th>{{index+1}}</th>
             <th>{{item.coaTitle}}</th>
-            <th>{{item.debit}}</th>
-            <th>{{item.credit}}</th>
+            <th>{{item.debit |number:'1.0-0'}}</th>
+            <th>{{item.credit |number:'1.0-0'}}</th>
             </tr>
         </table>
     </div>
@@ -142,14 +142,14 @@
                 <tr *ngFor="let item of invoiceDetails; index as index">
                     <td>{{index+1}}</td>
                     <td>{{item.coaTitle}} ({{item.accountCode}})</td>
-                    <td>{{item.debit |number}}</td>
-                    <td>{{item.credit |number}}</td>
+                    <td>{{item.debit |number:'1.0-0'}}</td>
+                    <td>{{item.credit |number:'1.0-0'}}</td>
                 </tr>
                 <tr>
                     <td></td>
                     <td><b>Total</b></td>
-                    <td><b>{{lblDebitTotal}}</b></td>
-                    <td><b>{{lblCreditTotal}}</b></td>
+                    <td><b>{{lblDebitTotal|number:'1.0-0'}}</b></td>
+                    <td><b>{{lblCreditTotal|number:'1.0-0'}}</b></td>
                 </tr>
             </tbody>
         </table>
