--- a/src/app/Reports/daily-transaction-rpt/daily-transaction-rpt.component.html
+++ b/src/app/Reports/daily-transaction-rpt/daily-transaction-rpt.component.html
@@ -75,10 +75,10 @@
                     <tr *ngFor="let item of reportData;index as index">
                         <td>{{index+1}}</td>
                         <td class="cursorPointer" data-bs-toggle="modal" data-bs-target="#invoiceDetailModel" 
-                        (click)="getInvoiceDetail(item.invoiceNo)"><span style="color: blue;border-bottom: 1px solid blue;">{{item.invoiceNo}}</span></td>
+                        (click)="getInvoiceDetail(item.invoiceNo)"><span style="color: blue;border-bottom: 1px solid blue;">{{item.invoiceNo|number}}</span></td>
                         <td>{{item.invoiceDate |date:'yyyy-MM-dd'}}</td>
                         <td class="col-lg-4">{{item.invoiceRemarks}}</td>
-                        <td class="text-end">{{item.amount |number}}</td>
+                        <td class="text-end">{{item.amount |number:'1.0-0'}}</td>
                     </tr>
                 </tbody>
             </table>
@@ -116,14 +116,14 @@
                 <tr *ngFor="let item of invoiceDetails; index as index">
                     <td>{{index+1}}</td>
                     <td>{{item.coaTitle}} ({{item.accountCode}})</td>
-                    <td>{{item.debit |number}}</td>
-                    <td>{{item.credit |number}}</td>
+                    <td>{{item.debit |number:'1.0-0'}}</td>
+                    <td>{{item.credit |number:'1.0-0'}}</td>
                 </tr>
                 <tr>
                     <td></td>
                     <td><b>Total</b></td>
-                    <td><b>{{lblDebitTotal |number}}</b></td>
-                    <td><b>{{lblCreditTotal |number}}</b></td>
+                    <td><b>{{lblDebitTotal |number:'1.0-0'}}</b></td>
+                    <td><b>{{lblCreditTotal |number:'1.0-0'}}</b></td>
                 </tr>
             </tbody>
         </table>
