--- a/src/app/Reports/list-of-rooms/list-of-rooms.component.html
+++ b/src/app/Reports/list-of-rooms/list-of-rooms.component.html
@@ -50,7 +50,7 @@
                             <td>{{item.roomCode}}</td>
                             <td>{{item.categoryName}}</td>
                             <td>{{item.floorName}}</td>
-                            <td class="text-end">{{item.rentPerDay |number}}</td>
+                            <td class="text-end">{{item.rentPerDay |number:'1.0-0'}}</td>
                             
         
                         </tr>
