--- a/src/app/Reports/plstat/plstat.component.html
+++ b/src/app/Reports/plstat/plstat.component.html
@@ -80,21 +80,21 @@
                 <tr *ngFor="let item of IncomeData;index as index" >
                     <td>{{index+1}}</td>
                     <th class="text-start">{{item.coaTitle}}</th>
-                    <td class="text-end">{{item.debit |number}}</td>
-                    <td class="text-end">{{item.credit |number}}</td>
+                    <td class="text-end">{{item.debit |number:'1.0-0'}}</td>
+                    <td class="text-end">{{item.credit |number:'1.0-0'}}</td>
                 </tr>
 
                 <!---------------- income Total Row ------------------>
                 <tr class="border-bottom border-top">
                     <td colspan="2"></td>
-                    <th class="text-end">{{incDebitTotal |number}}</th>
-                    <th class="text-end">{{incCreditTotal |number}}</th>
+                    <th class="text-end">{{incDebitTotal |number:'1.0-0'}}</th>
+                    <th class="text-end">{{incCreditTotal |number:'1.0-0'}}</th>
                 </tr>
                 
                 <tr style="border: 1px double; " class="mt-2 mb-2" >
                     <th colspan="3"> Total Income</th>
                     
-                    <th class="text-end">{{ incCreditTotal - incDebitTotal  |number}}</th>
+                    <th class="text-end">{{ incCreditTotal - incDebitTotal  |number:'1.0-0'}}</th>
                 </tr>
 
                  <!---------------- Expense SEction ------------------>
@@ -102,8 +102,8 @@
                 <tr *ngFor="let item of ExpenseData;index as index">
                     <td>{{index+1}}</td>
                     <th class="text-start">{{item.coaTitle}}</th>
-                    <td class="text-end">{{item.debit |number}}</td>
-                    <td class="text-end">{{item.credit |number}}</td>
+                    <td class="text-end">{{item.debit |number:'1.0-0'}}</td>
+                    <td class="text-end">{{item.credit |number:'1.0-0'}}</td>
                 </tr>
 
 
@@ -111,14 +111,14 @@
 
                 <tr>
                     <th colspan="2"></th>
-                    <th class="text-end">{{expDebitTotal |number}}</th>
-                    <th class="text-end">{{expCreditTotal |number}}</th>
+                    <th class="text-end">{{expDebitTotal |number:'1.0-0'}}</th>
+                    <th class="text-end">{{expCreditTotal |number:'1.0-0'}}</th>
                 </tr>
                 
                 <tr style="border: 1px double; " class="mt-2 mb-2">
                     <th colspan="3" > Total Expense</th>
                     
-                    <th colspan="1" class="text-end">{{expDebitTotal - expCreditTotal |number}}</th>
+                    <th colspan="1" class="text-end">{{expDebitTotal - expCreditTotal |number:'1.0-0'}}</th>
                 </tr>
 
 
@@ -128,7 +128,7 @@
                     <th colspan="3" *ngIf="(incCreditTotal - incDebitTotal ) - (expDebitTotal - expCreditTotal) >= 0">NET PROFIT</th>
                     <th colspan="3" *ngIf="(incCreditTotal - incDebitTotal ) - (expDebitTotal - expCreditTotal) < 0">NET LOSS</th>
                     
-                    <th colspan="1">{{(incCreditTotal - incDebitTotal ) - (expDebitTotal - expCreditTotal) |number }}</th>
+                    <th colspan="1">{{(incCreditTotal - incDebitTotal ) - (expDebitTotal - expCreditTotal) |number :'1.0-0'}}</th>
                 </tr>
 
 
